css/style.css
body{
    background-color: #F0EDE5; 
    font-family: 'Open Sans', sans-serif;
}

.bg-image {
  /* Add the blur effect */
  filter: blur(4px);
  -webkit-filter: blur(4px);

  /* Full height */
  height: 100%;

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* Position text in the middle of the page/image */
.bg-text {
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
  color: white;
  font-weight: bold;
  border: 3px solid #f1f1f1;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  width: 30%;
  padding: 20px;
  text-align: center;
  box-shadow: black;
}
.bg-video-1 {
  position: absolute;
  top: 30%;
  left: 25%;
  transform: translate(-50%, -50%) scale(0.45);
  z-index: 2;
  width: 30%;
  padding: 20px;
  text-align: center;
}
.bg-video-2 {
  position: absolute;
  top: 60%;
  left: 82%;
  transform: translate(-50%, -50%) scale(0.60);
  z-index: 2;
  width: 30%;
  padding: 20px;
  text-align: center;
}
.bg-video-3 {
  position: absolute;
  top: 80%;
  left: 49%;
  transform: translate(-50%, -50%);
  z-index: 2;
  width: 30%;
  padding: 20px;
  text-align: center;
}

.github-button{
  background-image: url("../images/github_icon.jpg");
  background-size: 100%;
  background-position: center;
}

.video-50-zoom{
  transform: scale(1.5);
}

.jumbotron{
  width:60%;
  margin: 1% auto 0 auto;
}

@media (max-width:767px) {
.jumbotron{
    width:80%;
    margin: 1% auto 0 auto;
  }
}

